<resources>
    <string name="app_name">FleetManager</string>
    <string name="title_activity">MainActivity</string>
    <string name="title_garage">Garage</string>
    <string name="title_activity_add_revision">Add Revision</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_employees">Employees</string>
    <string name="title_profile">Profile</string>
    <string name="title_trips">Trips</string>
    <string name="title_management_menu">Management Menu</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="add_employee">Add Employee</string>
    <string name="add_inspection">Add Inspection</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="add_insurance">Add Insurance</string>
    <string name="manage_vehicles">Manage Vehicles</string>
    <string name="add_revision">Add Revision</string>
    <string name="origin_title">Origin City</string>
    <string name="destination_title">Destination City</string>
    <string name="origin_hint">Type your city of origin</string>
    <string name="destination_hint">Type your destination city</string>
    <string name="chat">Chat</string>
    <string name="create_reminder">Create Reminder</string>
    <string name="location">Location</string>
    <string name="employee_email">Employee E-mail</string>
    <string name="date">Date</string>
    <string name="reminder_title">Title</string>
    <string name="address">Address</string>
    <string name="logout">Logout</string>

    <!--Dashboard-->
    <string name="add_revision_note">Add Revision Note</string>
    <string name="add_inspection_note">Add Inspection Note</string>
    <string name="add_insurance_note">Add Insurance Note</string>

    <!-- Shared Preferences -->
    <string name="preference_file_key">cn-sp</string>
    <string name="logged">logged</string>
    <string name="uid">uid</string>
    <string name="isEmployee">isEmplyoee</string>
    <string name="company">company</string>

    <!-- Login -->
    <string name="email">Email</string>
    <string name="passwd">Password</string>
    <string name="login">Login</string>
    <string name="google">Google</string>
    <string name="orLogin">or login with:</string>
    <string name="loginFailed">Login failed</string>
    <string name="emptyFields">Empty Fields</string>

    <!-- Vehicles -->
    <string name="vehicle_brand">%1$1s</string>
    <string name="vehicle_license">%1$1s</string>

    <!-- Employees -->
    <string name="employee_name">%1$1s</string>
    <string name="employee_id">%1$1s</string>
    <string name="employee_status">On Service</string>

    <string name="trip_date">%1$1s</string>
    <string name="trip_distance">%1$1s KM</string>

    <!--Vehicle Registration and Description-->
    <string name="vehicle_name">Employee Truck</string>
    <string name="vehicle_vin">VIN Number</string>
    <string name="vehicle_info">Vehicle Information</string>
    <string name="vehicle_model">Model</string>
    <string name="vehicle_plate">Plate</string>
    <string name="vehicle_consumption">Avg Consumption (l/Km)</string>
    <string name="vehicle_other_info">Other Information</string>
    <string name="vehicle_Kilometers">Kilometers</string>
    <string name="vehicle_last_revision">Last Revision</string>
    <string name="vehicle_revision_value">Revision Value</string>
    <string name="vehicle_last_revision_km">Last Revision Kilometers</string>
    <string name="vehicle_insurance_date">Insurance Date</string>
    <string name="vehicle_insurance_value">Insurance Value</string>
    <string name="vehicle_brand_name">Vehicle Brand</string>
    <string name="btn_add">Add</string>

    <!-- Alert Dialog -->
    <string name="confirm">Confirm</string>
    <string name="reply">Reply</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_maps_tracks">Map</string>


    <string name="offline">Offline</string>
    <string name="need_location">Enable GPS SERVICE</string>
    <string name="location_content">This app wants to change your device settings use GPS,Wi-Fi and cell networks for your location</string>
    <string name="online_driver">Online</string>

    <string name="total_online_drivers">Total Online Drivers : </string>

    <!-- Charts -->
    <string name="chart1">Cost per month:</string>
    <string name="chart2">Top spending cars:</string>
    <string name="chart3">Trips per month:</string>
    <string name="chart4">Employees: \n</string>
    <string name="chart5">Active: \n</string>
    <string name="month">Month</string>
    <string name="car">Car</string>
    <!-- Revisions -->
    <string name="company_name">Company</string>
    <string name="revision_price">Price €</string>
    <string name="payment_date">Payment Date</string>
    <string name="other_information">Other Information:</string>
    <string name="additional_info">Additional Info</string>

</resources>