<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".VehicleRegistration">

        <LinearLayout
            android:id="@+id/vehicle_title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/vehicle_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/circleImageViewStyle"
                app:srcCompat="@drawable/no_image"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:paddingHorizontal="10dp">
                <TextView
                    android:id="@+id/vehicle_brand_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vehicle_brand_name"/>
                <TextView
                    android:id="@+id/vehicle_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vehicle_name"/>

                <TextView
                    android:id="@+id/vehicle_vin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vehicle_vin"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/vehicle_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vehicle_title_layout">

            <TextView
                android:id="@+id/brand_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_brand"
                android:layout_marginBottom="5dp"/>

            <EditText
                android:id="@+id/brand_text"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/vehicle_brand_name"
                android:background="@drawable/edit_text_border"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/model_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_model"
                android:layout_marginBottom="5dp"/>

            <EditText
                android:id="@+id/model_text"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/vehicle_model"
                android:background="@drawable/edit_text_border"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/plate_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_plate"
                android:layout_marginBottom="5dp"/>

            <EditText
                android:id="@+id/plate_text"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/vehicle_plate"
                android:background="@drawable/edit_text_border"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/consumption_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_consumption"
                android:layout_marginBottom="5dp"/>

            <EditText
                android:id="@+id/consumption_text"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/edit_text_border"
                android:text="@string/vehicle_consumption"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/kilometers_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_Kilometers"
                android:layout_marginBottom="5dp"/>

            <EditText
                android:id="@+id/kilometers_text"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/vehicle_Kilometers"
                android:background="@drawable/edit_text_border"
                android:layout_marginBottom="10dp" />
            <TextView
                android:id="@+id/last_revision_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_last_revision"
                android:layout_marginBottom="5dp"/>

            <EditText
                android:id="@+id/last_revision_text"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/vehicle_last_revision"
                android:background="@drawable/edit_text_border"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/insurance_date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_insurance_date"
                android:layout_marginBottom="5dp"/>

            <EditText
                android:id="@+id/insurance_date_text"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/edit_text_border"
                android:text="@string/vehicle_insurance_date"
                android:layout_marginBottom="10dp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
